...
    }

    private func createMockedData() -> Data {
        return """
        {
            "rates": {
                "CAD": 1.4757,
                "HKD": 8.555
            }
        }
        """.data(using: .utf8)!
    }
}
...
