...
            view.frame = frame
            self.viewController?.navigationController?.view.addSubview(view)
        }
    }
    
    public func addSaveButton() {
        let button = UIBarButtonItem(title: "SAVE", style: .plain, target: self, action: #selector(saveCurrencyList))
        self.viewController?.navigationItem.rightBarButtonItem = button
    }

    @objc func saveCurrencyList() {
        var currencyList: [String] = []
        currencyList.append(contentsOf: interactor.activeCurrencyList)
...
