...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="H88-Eb-Cgy" id="a7a-nN-Few"/>
                            <outlet property="delegate" destination="H88-Eb-Cgy" id="FdP-81-SkZ"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Currency converter" id="4xM-q2-Kvr">
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="edit" id="cNg-e0-zsm">
                            <connections>
                                <action selector="onEditPressed:" destination="H88-Eb-Cgy" id="uQa-oy-2wV"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
